--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ os:
 language: rust
 rust:
 - nightly
+before_install:
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update; fi
+install:
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libfuse-dev; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install osxfuse; fi
 after_success: |
   [ $TRAVIS_BRANCH = master ] &&
   [ $TRAVIS_PULL_REQUEST = false ] &&
