Changes to docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 name = "drive"
 version = "0.0.1"
-authors = ["David Irvine <david.irvine@maidsafe.net>"]
+authors = [“MaidSafe Developers <dev@maidsafe.net>"]
 description = "This is Pre alpha, and not useful, no code worth looking at."
 documentation = "http://dirvine.github.io/drive/"
 repository = "https://github.com/dirvine/drive"
