travis tagging integration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ name = "drive"
 version = "0.0.1"
 authors = ["MaidSafe Developers <dev@maidsafe.net>"]
 description = "This is Pre alpha, and not useful, no code worth looking at."
-documentation = "http://dirvine.github.io/drive/"
+documentation = "http://maidsafe.github.io/drive/latest/"
 repository = "https://github.com/dirvine/drive"
 readme = "README.md"
 license = "GPL-3.0"
