--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
-
 name = "drive"
 version = "0.0.1"
 authors = ["MaidSafe Developers <dev@maidsafe.net>"]
 description = "This is Pre alpha, and not useful, no code worth looking at."
-documentation = "http://maidsafe.github.io/drive/latest/"
+documentation = "http://maidsafe.net/drive/latest"
 repository = "https://github.com/maidsafe/drive"
 readme = "README.md"
 license = "GPL-3.0"
-homepage = "http://www.maidsafe.net"
+homepage = "http://maidsafe.net"
 
 # until this is updated on crates.io we need to get from git
 #[dependencies.fuse]
