--- a/.travis.yml
+++ b/.travis.yml
@@ -1,70 +1,22 @@
 os:
   - linux
   - osx
-
 language: rust
-
-sudo: required
-
 rust:
   - beta
-
-before_install:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update; fi
+sudo: false
+branches:
+  only:
+      - master
 
 install:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libfuse-dev; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install osxfuse; fi
-
-before_script:
-  - |
-      sudo apt-get update -qq &&
-      sudo apt-get install -qq libcurl4-openssl-dev libelf-dev libdw-dev binutils-dev &&
-      pip install 'travis-cargo<0.2' --user &&
-      export PATH=$HOME/.local/bin:$PATH
-
+  - curl -sSL https://github.com/maidsafe/QA/raw/master/Bash%20Scripts/Travis/install_libsodium.sh | bash
+  - export PKG_CONFIG_PATH=$HOME/libsodium-1.0.3/lib/pkgconfig:$PKG_CONFIG_PATH
 script:
-  - |
-      travis-cargo build &&
-      travis-cargo test &&
-      travis-cargo bench &&
-      travis-cargo --only beta doc
-after_success: |
-    if  [[ $TRAVIS_BRANCH = master ]] && [[ $TRAVIS_PULL_REQUEST = false ]]; then
-        cargo doc &&
-        echo "<meta http-equiv=refresh content=0;url=`echo $TRAVIS_REPO_SLUG | cut -d '/' -f 2`/index.html>" > target/doc/index.html &&
-        sudo pip install ghp-import &&
-        mkdir docs-stage &&
-        COMMIT_MSG=$(git log -1 | tr '[:upper:]' '[:lower:]' | grep "version change to " | tr -d ' ') &&
-        git clone https://github.com/${TRAVIS_REPO_SLUG}.git  docs-stage &&
-        cd docs-stage &&
-        git checkout gh-pages;
-        rm -rf .git*;
-        # lines 45 - 48 is a patch script for handling old gh-pages structure
-        OLD_FILE=$(ls | grep "main.js");
-        if [[ $OLD_FILE == main* ]]; then
-          rm -rf * &&
-          echo "<meta http-equiv=refresh content=0;url=master/`echo $TRAVIS_REPO_SLUG | cut -d '/' -f 2`/index.html>" > index.html;
-        fi
-        if [[ $COMMIT_MSG == versionchangeto* ]];  then
-          VERSION=${COMMIT_MSG##*to} &&
-          mkdir -p $VERSION &&
-          mkdir -p latest &&
-          cp -rf ../target/doc/* $VERSION &&
-          cp -rf ../target/doc/* latest &&
-          git config --global user.email dev@miadsafe.net &&
-          git config --global user.name maidsafe-jenkins &&
-          git tag $VERSION -a -m "Version $VERSION" &&
-          git push -q https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG} --tags;
-        fi
-        mkdir -p master
-        cp -rf ../target/doc/* master &&
-        cd .. &&
-        ghp-import -n docs-stage &&
-        git push -fq https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages;
-        travis-cargo coveralls;
-    fi
+  - cargo build --verbose
+  - RUST_TEST_THREADS=1 cargo test
+after_success:
+  - curl -sSL https://github.com/maidsafe/QA/raw/master/Bash%20Scripts/Travis/deploy_gh-pages.sh | bash
 
 env:
   global:
